--- a/sortmet/index.html
+++ b/sortmet/index.html
@@ -322,7 +322,7 @@
 										<div class="card__price-current">101 750 ₽/тн</div>
 										<div class="card__price-old">102 800 р</div>
 									</div>
-									<div class="card__name">Уголок металлический 25х25х1.2 6 (метров)</div>
+									<a href="#" class="card__name">Уголок металлический 25х25х1.2 6 (метров)</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -391,7 +391,7 @@
 									<div class="card__price">
 										<div class="card__price-current">49 000 ₽/тн</div>
 									</div>
-									<div class="card__name">Трубы электросварные (ЭСВ) квадратные 80х80х4</div>
+									<a href="#" class="card__name">Трубы электросварные (ЭСВ) квадратные 80х80х4</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -463,7 +463,7 @@
 									<div class="card__price">
 										<div class="card__price-current">73 100 ₽/тн</div>
 									</div>
-									<div class="card__name">Труба профильная квадратная 80х80х3 электросварная</div>
+									<a href="#" class="card__name">Труба профильная квадратная 80х80х3 электросварная</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -532,7 +532,7 @@
 									<div class="card__price">
 										<div class="card__price-current">99 900 ₽/тн</div>
 									</div>
-									<div class="card__name">Швеллер низколегированный10У 12 метров</div>
+									<a href="#" class="card__name">Швеллер низколегированный10У 12 метров</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -606,7 +606,7 @@
 										<div class="card__price-current">101 750 ₽/тн</div>
 										<div class="card__price-old">102 800 р</div>
 									</div>
-									<div class="card__name">Уголок металлический 25х25х1.2 6 (метров)</div>
+									<a href="#" class="card__name">Уголок металлический 25х25х1.2 6 (метров)</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -675,7 +675,7 @@
 									<div class="card__price">
 										<div class="card__price-current">49 000 ₽/тн</div>
 									</div>
-									<div class="card__name">Трубы электросварные (ЭСВ) квадратные 80х80х4</div>
+									<a href="#" class="card__name">Трубы электросварные (ЭСВ) квадратные 80х80х4</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -747,7 +747,7 @@
 									<div class="card__price">
 										<div class="card__price-current">73 100 ₽/тн</div>
 									</div>
-									<div class="card__name">Труба профильная квадратная 80х80х3 электросварная</div>
+									<a href="#" class="card__name">Труба профильная квадратная 80х80х3 электросварная</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -816,7 +816,7 @@
 									<div class="card__price">
 										<div class="card__price-current">99 900 ₽/тн</div>
 									</div>
-									<div class="card__name">Швеллер низколегированный10У 12 метров</div>
+									<a href="#" class="card__name">Швеллер низколегированный10У 12 метров</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -890,7 +890,7 @@
 										<div class="card__price-current">101 750 ₽/тн</div>
 										<div class="card__price-old">102 800 р</div>
 									</div>
-									<div class="card__name">Уголок металлический 25х25х1.2 6 (метров)</div>
+									<a href="#" class="card__name">Уголок металлический 25х25х1.2 6 (метров)</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -959,7 +959,7 @@
 									<div class="card__price">
 										<div class="card__price-current">49 000 ₽/тн</div>
 									</div>
-									<div class="card__name">Трубы электросварные (ЭСВ) квадратные 80х80х4</div>
+									<a href="#" class="card__name">Трубы электросварные (ЭСВ) квадратные 80х80х4</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -1031,7 +1031,7 @@
 									<div class="card__price">
 										<div class="card__price-current">73 100 ₽/тн</div>
 									</div>
-									<div class="card__name">Труба профильная квадратная 80х80х3 электросварная</div>
+									<a href="#" class="card__name">Труба профильная квадратная 80х80х3 электросварная</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -1100,7 +1100,7 @@
 									<div class="card__price">
 										<div class="card__price-current">99 900 ₽/тн</div>
 									</div>
-									<div class="card__name">Швеллер низколегированный10У 12 метров</div>
+									<a href="#" class="card__name">Швеллер низколегированный10У 12 метров</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -1270,7 +1270,7 @@
 										<div class="card__price-current">101 750 ₽/тн</div>
 										<div class="card__price-old">102 800 р</div>
 									</div>
-									<div class="card__name">Уголок металлический 25х25х1.2 6 (метров)</div>
+									<a href="#" class="card__name">Уголок металлический 25х25х1.2 6 (метров)</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -1339,7 +1339,7 @@
 									<div class="card__price">
 										<div class="card__price-current">49 000 ₽/тн</div>
 									</div>
-									<div class="card__name">Трубы электросварные (ЭСВ) квадратные 80х80х4</div>
+									<a href="#" class="card__name">Трубы электросварные (ЭСВ) квадратные 80х80х4</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -1411,7 +1411,7 @@
 									<div class="card__price">
 										<div class="card__price-current">73 100 ₽/тн</div>
 									</div>
-									<div class="card__name">Труба профильная квадратная 80х80х3 электросварная</div>
+									<a href="#" class="card__name">Труба профильная квадратная 80х80х3 электросварная</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -1480,7 +1480,7 @@
 									<div class="card__price">
 										<div class="card__price-current">99 900 ₽/тн</div>
 									</div>
-									<div class="card__name">Швеллер низколегированный10У 12 метров</div>
+									<a href="#" class="card__name">Швеллер низколегированный10У 12 метров</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -1554,7 +1554,7 @@
 										<div class="card__price-current">101 750 ₽/тн</div>
 										<div class="card__price-old">102 800 р</div>
 									</div>
-									<div class="card__name">Уголок металлический 25х25х1.2 6 (метров)</div>
+									<a href="#" class="card__name">Уголок металлический 25х25х1.2 6 (метров)</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -1623,7 +1623,7 @@
 									<div class="card__price">
 										<div class="card__price-current">49 000 ₽/тн</div>
 									</div>
-									<div class="card__name">Трубы электросварные (ЭСВ) квадратные 80х80х4</div>
+									<a href="#" class="card__name">Трубы электросварные (ЭСВ) квадратные 80х80х4</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -1695,7 +1695,7 @@
 									<div class="card__price">
 										<div class="card__price-current">73 100 ₽/тн</div>
 									</div>
-									<div class="card__name">Труба профильная квадратная 80х80х3 электросварная</div>
+									<a href="#" class="card__name">Труба профильная квадратная 80х80х3 электросварная</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -1764,7 +1764,7 @@
 									<div class="card__price">
 										<div class="card__price-current">99 900 ₽/тн</div>
 									</div>
-									<div class="card__name">Швеллер низколегированный10У 12 метров</div>
+									<a href="#" class="card__name">Швеллер низколегированный10У 12 метров</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -1838,7 +1838,7 @@
 										<div class="card__price-current">101 750 ₽/тн</div>
 										<div class="card__price-old">102 800 р</div>
 									</div>
-									<div class="card__name">Уголок металлический 25х25х1.2 6 (метров)</div>
+									<a href="#" class="card__name">Уголок металлический 25х25х1.2 6 (метров)</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -1907,7 +1907,7 @@
 									<div class="card__price">
 										<div class="card__price-current">49 000 ₽/тн</div>
 									</div>
-									<div class="card__name">Трубы электросварные (ЭСВ) квадратные 80х80х4</div>
+									<a href="#" class="card__name">Трубы электросварные (ЭСВ) квадратные 80х80х4</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -1979,7 +1979,7 @@
 									<div class="card__price">
 										<div class="card__price-current">73 100 ₽/тн</div>
 									</div>
-									<div class="card__name">Труба профильная квадратная 80х80х3 электросварная</div>
+									<a href="#" class="card__name">Труба профильная квадратная 80х80х3 электросварная</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -2048,7 +2048,7 @@
 									<div class="card__price">
 										<div class="card__price-current">99 900 ₽/тн</div>
 									</div>
-									<div class="card__name">Швеллер низколегированный10У 12 метров</div>
+									<a href="#" class="card__name">Швеллер низколегированный10У 12 метров</a>
 									<div class="card__block">
 										<div class="card__characteristics characteristics">
 											<div class="characteristics__item">
@@ -2162,23 +2162,23 @@
 						<div class="form__policy">Заполняя форму вы соглашаетесь на <a href="#">обработку персональных данных</a></div>	
 					</div>
 				</form>
-				<section class="suppliers">
+				<section class="partners">
 					<div class="title">Наши поставщики</div>
-					<div class="suppliers__list swiper" id="suppliers-slider">
+					<div class="partners__list swiper" id="suppilers-slider">
 						<div class="swiper-wrapper">
-							<div class="suppliers__item swiper-slide">
+							<div class="partners__item swiper-slide">
 								<img src="images/dest/supplier-1.webp" alt="">
 							</div>
-							<div class="suppliers__item swiper-slide">
+							<div class="partners__item swiper-slide">
 								<img src="images/dest/supplier-2.webp" alt="">
 							</div>
-							<div class="suppliers__item swiper-slide">
+							<div class="partners__item swiper-slide">
 								<img src="images/dest/supplier-3.webp" alt="">
 							</div>
-							<div class="suppliers__item swiper-slide">
+							<div class="partners__item swiper-slide">
 								<img src="images/dest/supplier-4.webp" alt="">
 							</div>
-							<div class="suppliers__item swiper-slide">
+							<div class="partners__item swiper-slide">
 								<img src="images/dest/supplier-5.webp" alt="">
 							</div>
 						</div>
@@ -2339,6 +2339,28 @@
 						<div class="pagination" id="reviews-pagination"></div>
 					</div>
 				
+				</section>
+				<section class="partners">
+					<div class="title">У нас покупают</div>
+					<div class="partners__list swiper" id="buyers-slider">
+						<div class="swiper-wrapper">
+							<div class="partners__item swiper-slide">
+								<img src="images/dest/buyer-1.webp" alt="">
+							</div>
+							<div class="partners__item swiper-slide">
+								<img src="images/dest/buyer-2.webp" alt="">
+							</div>
+							<div class="partners__item swiper-slide">
+								<img src="images/dest/buyer-3.webp" alt="">
+							</div>
+							<div class="partners__item swiper-slide">
+								<img src="images/dest/buyer-4.webp" alt="">
+							</div>
+							<div class="partners__item swiper-slide">
+								<img src="images/dest/buyer-5.webp" alt="">
+							</div>
+						</div>
+					</div>
 				</section>
 				<section class="about-us">
 					<div class="title">О компании</div>
